# BUFF

./: .clang-format  .prettierrc  CMakeLists.txt  CMakeSettings.json  LICENSE  buff.bat  eslint.config.mjs  tsconfig.json
Buff/: BuffResharper.DotSettings  CMakeLists.txt  buff.natvis  cpp.hint
Buff/Benchmark/: Benchmark.cpp  CMakeLists.txt
Buff/CodeFormatter/: CMakeLists.txt  CodeFormatter.cpp
Buff/EmscriptenHelloWorld/: CMakeLists.txt  EmscriptenHelloWorld.cpp  _EmscriptenHelloWorldEmscripten.bat
Buff/EmscriptenHelloWorld/assets/: naked_owl.html
Buff/ImguiHelloWorld/: CMakeLists.txt  ImguiHelloWorld.cpp  _ImguiHelloWorldEmscripten.bat
Buff/Lib/: Algorithm.h  Assert.cpp  Assert.h  AutoPtr.Test.cpp  AutoPtr.h  Bootstrap.Test.h  Bootstrap.h  BoundingBox.h  CMakeLists.txt  Concepts.h  Cryptography.Test.cpp  Cryptography.cpp  Cryptography.h  Exception.h  Expected.Test.cpp  Expected.h  Filesystem.Test.cpp  Filesystem.cpp  Filesystem.h  Flags.h  FpsMeasurement.h  Function.Test.cpp  Function.h  Game.cpp  Game.h  Json.Test.cpp  Json.cpp  Json.h  Math.Test.cpp  Math.h  Misc.cpp  Optional.Test.cpp  Optional.h  Path.Test.cpp  Path.cpp  Path.h  Pixel.h  Platform.Test.cpp  Platform.cpp  Platform.h  (+35 more)
Buff/Lib/containers/: Array.Test.cpp  Array.h  Array2D.Test.cpp  Array2D.h  ArrayView.Test.cpp  ArrayView.h  HashMap.Test.cpp  HashMap.h  Iterator.Test.cpp  Iterator.h  Map.Test.cpp  Map.h  Set.Test.cpp  Set.h  SmallArray.Test.cpp  SmallArray.h  StableArray.Test.cpp  StableArray.h  StaticArray.Test.cpp  StaticArray.h  StaticStack.Test.cpp  StaticStack.h
Buff/Lib/meta/: MetaStruct.Test.cpp  MetaStruct.cpp  MetaStruct.h
Buff/LibEmscripten/: LibEmscripten.h
Buff/LibImage/: CMakeLists.txt  LibImage.cpp  LibImage.h
Buff/LibImgui/: CMakeLists.txt  ImguiConfigInjection.h  ImguiFunctions.h  LibImgui.cpp  LibImgui.h
Buff/LibSdl/: CMakeLists.txt  LibSdl.cpp  LibSdl.h  SdlTexture.cpp  SdlTexture.h  SdlUtils.cpp  SdlUtils.h  SdlWindow.cpp  SdlWindow.h
Buff/LibUltralight/: CMakeLists.txt  LibUltralight.cpp  LibUltralight.h  Panel.cpp  Panel.h  UlFilesystem.h  UlLogger.h
Buff/LibUltralight/assets/: Lib.ts  LibMouse.ts  LibUltralight.d.ts  Menu.less  NodeEditor.less  NodeEditor.ts  Panel.DockedPanel.ts  Panel.FloatingPanel.ts  Panel.less  Panel.ts
Buff/LibWindows/: AssertHandler.h  CMakeLists.txt  DirectoryModificationWatcher.Test.cpp  DirectoryModificationWatcher.cpp  DirectoryModificationWatcher.h  FileSystemDialogs.cpp  FileSystemDialogs.h  HotswapLoader.h  Main.Test.cpp  Net.Test.cpp  Net.cpp  Net.h  Platform.Test.cpp  Platform.cpp  Platform.h
Buff/Sandbox/: CMakeLists.txt  Sandbox.cpp
Buff/Scripts/: .gitignore  Assets.cmake  Buff.ts  Functions.cmake  Setup.reg  Warnings.cmake  package-lock.json  package.json  tsconfig.json  vcpkgDeps.txt
Buff/TsDevServer/: eslint.config.mjs  package-lock.json  package.json  tsconfig.json
Buff/TsDevServer/src/: TsDevServer.ts
